Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumObjInteger.quorum
class Main
    action Main
        Number v
        v:SetValue(Test())
    end

    action Test() returns Number
        integer var = 5
        return var
    end
end